# python-open

./: .gitignore  .pre-commit-config.yaml  README.md
0003-gitlab-rest-api/: pyproject.toml
0003-gitlab-rest-api/src/: main.py
0004-DAP/: pyproject.toml
0004-DAP/src/: main.py
0005-audio-record/: README.md  pyproject.toml
0005-audio-record/src/: main.py
0005-text-to-speech-to-bin/: .pre-commit-config.yaml
0006-pytest/: pyproject.toml
0007-excel/: pyproject.toml
0007-excel/src/: main.py
0009-teams-webhook/: pyproject.toml
0009-teams-webhook/src/: main.py
9999-pre-commit-test/src/: main.py
hello-world-uv/: hello.py  pyproject.toml
hello-world-uv/src/: main.py
opencv-video-splitter/: README.md  pyproject.toml
opencv-video-splitter/src/: main.py
selenium-tutorial-parser/: README.md  pyproject.toml
selenium-tutorial-parser/src/: main.ipynb
