[project]
name = "0004-dap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Muhammad Hafiz bin Muhamad", email = "mhafiz.muhamad@gmail.com" }
]
classifiers = [
  "Private :: Do not Upload",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

# for extra optional features
[project.optional-dependencies]
dev = [
#   "refurb",
]

# for develepment only
[dependency-groups]
dev = [
  "debugpy",
]

# [project.scripts]

# [project.urls]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
extend-select = ["ARG", "E", "F", "W"]
ignore = ["E501"]

[tool.basedpyright]
reportOptionalMemberAccess = "none"
reportUnusedImport = "none"
reportUnusedParameter = "none"
reportUnusedVariable = "none"
typeCheckingMode = "standard"

