[build-system]
requires = ["pip", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "your-name", email = "your-email" }
]
classifiers = [
  "Private :: Do not Upload",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "black>=25.1.0",
    "pytest>=8.3.5",
]

# [project.scripts]

# [project.urls]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
extend-select = ["ARG", "E", "F", "W"]
ignore = ["E501"]

[tool.basedpyright]
reportOptionalMemberAccess = "none"
reportUnusedImport = "none"
reportUnusedParameter = "none"
reportUnusedVariable = "none"
typeCheckingMode = "standard"
